[FINISHED] doing the inspiration page

--- a/files/sub_pages/commit/index.html
+++ b/files/sub_pages/commit/index.html
@@ -38,7 +38,10 @@
         <br>
         <br>
         <main>
-            <p>Hello World</p>
+            <article class="article_body">
+                <h1>Commit</h1>
+                <p></p>
+            </article>
         </main>
         <footer>
             <inform id="inform_cookie"></inform>
