--- a/files/sub_pages/story/index.html
+++ b/files/sub_pages/story/index.html
@@ -79,12 +79,12 @@
         <script type="text/JavaScript">
             add_emoji("joke1", "😉", "A winking emoji");
             add_emoji("sad1", "😢", "A sad emoji");
-            add_emoji("amazed1", "😲", "an amazed emoji");
-            add_emoji("space1", "🚀", "a rocket that is flying", "emoji_g_u");
-            add_emoji("earth1", "🌍", "a globe that is on the earth", "emoji_g_u");
-            add_emoji("mars1", "🌑", "a moon that is on mars", "emoji_g_u");
-            add_emoji("shield1", "🛡️", "a shield", "emoji_g_u");
-            add_emoji("potion1", "🧪", "a test tube", "emoji_g_u");
+            add_emoji("amazed1", "😲", "An amazed emoji");
+            add_emoji("space1", "🚀", "A rocket that is flying", "emoji_g_u");
+            add_emoji("earth1", "🌍", "Planet earth", "emoji_g_u");
+            add_emoji("mars1", "🌑", "A moon that is on mars", "emoji_g_u");
+            add_emoji("shield1", "🛡️", "A shield", "emoji_g_u");
+            add_emoji("potion1", "🧪", "A test tube", "emoji_g_u");
         </script>
         <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
     </body>
