--- a/files/sub_pages/inspiration/index.html
+++ b/files/sub_pages/inspiration/index.html
@@ -37,6 +37,7 @@
         <script src="./../../js/copyright.js" type="text/JavaScript"></script>
         <script src="./../../js/story/add_an_image.js" type="text/JavaScript"></script>
         <script src="./../../js/story/add_emoji.js" type="text/JavaScript"></script>
+        <script src="./../../js/assets/add_a_joke.js" type="text/JavaScript"></script>
     </head>
 
     <body>
