--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <script src="./files/js/assets/animate_menu.js" type="text/JavaScript"></script>
         <script src="./files/js/table_of_contents.js" type="text/JavaScript"></script>
         <script src="./files/js/copyright.js" type="text/JavaScript"></script>
+        <script src="./files/js/assets/add_a_joke.js" type="text/JavaScript"></script>
     </head>
 
     <body>
