--- a/files/sub_pages/credits/index.html
+++ b/files/sub_pages/credits/index.html
@@ -40,6 +40,7 @@
         <script src="./../../js/add_contributor.js" type="text/JavaScript"></script>
         <script src="./../../js/story/add_emoji.js" type="text/JavaScript"></script>
         <script src="./../../js/story/add_an_image.js" type="text/JavaScript"></script>
+        <script src="./../../js/assets/add_a_joke.js" type="text/JavaScript"></script>
     </head>
 
     <body>
