--- a/files/sub_pages/story/index.html
+++ b/files/sub_pages/story/index.html
@@ -33,6 +33,7 @@
         <script src="./../../js/assets/animate_menu.js" type="text/JavaScript"></script>
         <script src="./../../js/table_of_contents.js" type="text/JavaScript"></script>
         <script src="./../../js/copyright.js" type="text/JavaScript"></script>
+        <script src="./../../js/assets/add_a_joke.js" type="text/JavaScript"></script>
         <script src="./../../js/story/add_an_image.js" type="text/JavaScript"></script>
         <script src="./../../js/story/add_emoji.js" type="text/JavaScript"></script>
     </head>
