--- a/files/sub_pages/timeline/index.html
+++ b/files/sub_pages/timeline/index.html
@@ -30,6 +30,7 @@
         <script src="./../../js/assets/animate_menu.js" type="text/JavaScript"></script>
         <script src="./../../js/table_of_contents.js" type="text/JavaScript"></script>
         <script src="./../../js/copyright.js" type="text/JavaScript"></script>
+        <script src="./../../js/assets/add_a_joke.js" type="text/JavaScript"></script>
     </head>
 
     <body>
