[Harleen] customiszed her badge

--- a/files/sub_pages/commit/index.html
+++ b/files/sub_pages/commit/index.html
@@ -219,7 +219,7 @@
             add_number_of_forks("forks", owner, repository);
             add_number_of_stars("stars", owner, repository);
             add_number_of_watchers("watchers", owner, repository);
-            add_a_user_global_status("contributor_harleen_sk","Harleen-sk");
+            add_a_user_global_status("contributor_harleen_sk","Harleen-sk", "cobalt2");
             add_a_user_global_status("contributor_imariee","iMariee");
             add_a_user_global_status("contributor_orionpx4k","OrionPX4k");
             add_a_user_global_status("contributor_komiwolf","KomiWolf");
