--- a/files/sub_pages/commit/index.html
+++ b/files/sub_pages/commit/index.html
@@ -220,7 +220,7 @@
             add_number_of_stars("stars", owner, repository);
             add_number_of_watchers("watchers", owner, repository);
             add_a_user_global_status("contributor_harleen_sk","Harleen-sk", "cobalt2");
-            add_a_user_global_status("contributor_imariee","iMariee");
+            add_a_user_global_status("contributor_imariee","iMariee", "jolly");
             add_a_user_global_status("contributor_orionpx4k","OrionPX4k");
             add_a_user_global_status("contributor_komiwolf","KomiWolf");
             add_last_commit("last_commit", owner, repository);
