[FIXED] a few styling issues

--- a/files/sub_pages/powerpoint/index.html
+++ b/files/sub_pages/powerpoint/index.html
@@ -40,8 +40,9 @@
         <br>
         <br>
         <main>
-            <p>Hello World</p>
-            <iframe src="https://onedrive.live.com/embed?cid=DBC2FB43E15F5B13&resid=DBC2FB43E15F5B13%2143471&authkey=ANK87KIM3E5I0Fo&em=2" class="window" frameborder="0" scrolling="no"></iframe>
+            <div style="width:100%;height:100%;">
+                <iframe src="https://onedrive.live.com/embed?cid=DBC2FB43E15F5B13&resid=DBC2FB43E15F5B13%2143471&authkey=ANK87KIM3E5I0Fo&em=2" class="window" frameborder="0" scrolling="no"></iframe>
+            </div>
         </main>
         <footer>
             <inform id="inform_cookie"></inform>
