--- a/files/sub_pages/try_me/index.html
+++ b/files/sub_pages/try_me/index.html
@@ -41,7 +41,15 @@
         <br>
         <br>
         <main>
-            <div class="msg_section" id="msg_content"></div>
+            <div class="msg_section" id="msg_content">
+                <p>Dear Visitors,</p>
+                <p>Unfortunately, based of my current knowledge of web assembly it is not possible for me to compile CSFML in a way that a browser could run it.\n</p>
+                <br>
+                <p>I am sincerely sorry for dissapointing you.</p>
+                <br>
+                <p><span style='text-align:left'><i>The website creator</i></span></p>
+                </pre>"
+            </div>
         </main>
         <footer>
             <inform id="inform_cookie"></inform>
@@ -54,7 +62,7 @@
             initialiseTheme("theme","darkOrLight",'../../../','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
             copyright("copyright_zone");
             add_inform("inform_cookie");
-            add_text_with_delay("msg_content", "", 0.1);
+            // add_text_with_delay("msg_content", "", 0.1);
         </script>
         <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
     </body>
