--- a/files/sub_pages/powerpoint/index.html
+++ b/files/sub_pages/powerpoint/index.html
@@ -40,9 +40,12 @@
         <br>
         <br>
         <main>
-            <div style="width:100%;height:100%;">
-                <iframe src="https://onedrive.live.com/embed?cid=DBC2FB43E15F5B13&resid=DBC2FB43E15F5B13%2143471&authkey=ANK87KIM3E5I0Fo&em=2" class="window" frameborder="0" scrolling="no"></iframe>
-            </div>
+            <!-- <div class="canvas_config">
+                <iframe loading="lazy" class="canvas_config_iframe" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFhHPsNneU&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+                </iframe>
+            </div> -->
+            <iframe loading="lazy" class="window" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFhHPsNneU&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+            <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFhHPsNneU&#x2F;view?utm_content=DAFhHPsNneU&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">RPG diapo</a>
         </main>
         <footer>
             <inform id="inform_cookie"></inform>
