--- a/bonus/bonus_dark_pop_up/index.html
+++ b/bonus/bonus_dark_pop_up/index.html
@@ -2,21 +2,32 @@
 <html>
 
     <head>
-        <link rel="stylesheet" src="stylesheet.css">
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="stylesheet.css">
+        <script type="text/JavaScript" src="script.js"></script>
     </head>
 
-    <body>
-        <div class="container" id="pop-up">
-            <div class="border_right">
-                <img src="icon.png" />
+    <body class="my_body">
+        <div class="win_box" id="pop-up">
+            <div class="win_title">
+                <img src="./img/windows_95.png" width="18" height="18" class="img_title" />
+                <p class="win_text_title p_font">Windows 95</p>
+                <button class="win_title_button" onclick="close_window('pop-up')">X</button>
+                <button class="win_title_button" onclick="close_window('pop-up')">?</button>
             </div>
-            <div class="border_left">
-                <button onclick="close_window('pop-up')" class="cross">X</button>
-                <button onclick="close_window('pop-up')" class="minimise">_</button>
+            <div class="win_body">
+                <div class="message_section">
+                    <div class="message_icon">
+                        <img class="message_icon" src="./img/error_icon.png" />
+                    </div>
+                    <div class="message_content p_font_body">
+                        <p>Welcome to your PC!</p>
+                    </div>
+                </div>
+                <div class="body_button_section">
+                    <button class="win_body_button" onclick="close_window('pop-up')">OK</button>
+                </div>
             </div>
-            <p class="msg_center">msg</p>
-            <button class="ok_button" onclick="close_window('pop-up')">OK</button>
+        </div>
     </body>
 
 </html>
